fixed broken css font in paragraphs

--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
 p {
-    font-family:Crimson, cursive;
+    font-family:Crimson Text;
 }
